# ResumeAIEvaluator

./: .gitignore  .replit  README.md  app.py  database.py  dependencies.txt  pyproject.toml  resume_evaluator.py  resume_parser.py  sentiment_analyzer.py  utils.py
.cache/replit/modules/: python-3.11
.cache/replit/nix/: dotreplitenv.json
.upm/: store.json
attached_assets/: Pasted-Company-Flive-Consulting-Private-Limited-Brand-Unstop-Formerly-Dare2Compete-Reg-Address-6317--1745426829416.txt
